--- a/src/main/webapp/css/homepage-main.css
+++ b/src/main/webapp/css/homepage-main.css
@@ -4,18 +4,14 @@ body{
 }
 
 .ATF{
-    
     height: 100vh;
     width: 100%;
     overflow: hidden;
     text-align: center;
-
 }
 
-.MID{
-    height: 100vh;
+.section-2{
     width: 100%;
-    background-color: #43b988 !important;
     overflow: hidden;
     text-align: center;
     position: relative;
@@ -36,13 +32,44 @@ body{
     display: table;
 }
 
+.section-2-1{
+    padding: 200px 0 200px 0;
+    background-color: #43b988 !important;
+}
 
+.section-2-2{
+    padding: 5% 0 9% 0;
+    width: 100%;
+    background-color: white !important;
+    overflow: hidden;
+    text-align: center;
+    position: relative;
+}
 
-.BTF{
-    background-color: white;
-    height: 100vh;
+.section-3{
+    background-image: linear-gradient(180deg, #43b988 0%, #009efd 180%);
     width: 100%;
     position: relative;
+    padding-bottom: 12%;
+}
+
+.section-3-container{
+    max-width: 1200px;
+    margin: auto;
+}
+
+.video-holder{
+    height: 420px;
+    width: 720px;
+    background-color: black;
+    border: 1px solid white;
+    position: relative;
+}
+
+.text-holder{
+    height: 420px;
+    padding: 2% 0 2% 0;
+
 }
 
 .contain{
@@ -78,49 +105,100 @@ body{
 
 .title{
     font-family: "Bebas Neue", Arial; 
-    font-size: 60px; 
-    color: #343f44;  
+    font-size: 52px; 
+    color: #dedede; 
 }
 
 .title2{
     font-family: "Bebas Neue", Arial; 
     font-size: 70px; 
-    color: #dedede;  
+    color:#343f44;;  
     text-align: center;
-    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.title3{
+    font-family: "Bebas Neue", Arial; 
+    font-size: 70px; 
+    color:white;  
+    text-align: center;
+    padding-top: 30px;
+    margin-bottom: 40px;
 }
 
 .text-content{
     font-family: "Bebas Neue", Arial; 
     font-size: 20px; 
-    color: #343f44;
+    color: #dedede;
     padding: 0 20px 20px 20px;
 }
 
 .main-icon{
- height: 80px;
+    height: 90px;
+    background-color: white;
+    border-radius: 100px;
+    padding: 11px;
 }
 
+.destination-row{
+    margin: auto;
+    max-width: 1100px;
+    margin-top: 40px;
+    position: relative;
+}
+
+.destination-row-text{
+    margin-top: 5px;
+    margin: auto;
+    max-width: 1100px;
+}
+
+
+.destination-text{
+    color: #343f44;
+    margin-top: 12px;
+    float: left;
+    font-weight: 600;
+}
+
+.destination-image{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all .2s ease-in-out;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.destination-image:hover{
+    transform: scale(1.05);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
 
 .footer{
-    bottom: 0;
-    height: 50px;
-    width: 100%;
-    text-align: center;
-    position: absolute;
-}
-
-.footer-icon{
-    width: 40px;
-    display: inline-block;
-    cursor: pointer;
-
+    position: relative !important;
+    background-color:rgb(23, 21, 37);
 }
 
 .col-main{
-    padding: 6% 17% 0% 17%;
-        font-family: "Bebas Neue", Arial; 
+    padding: 4% 14% 2% 14%;
+    font-family: "Bebas Neue", Arial; 
     font-size: 20px; 
- 
 }
 
+.section-3-titles{
+    font-family: "Bebas Neue", Arial; 
+    font-size: 35px; 
+    color: #dedede;
+}
+
+.play-button{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: table;
+    margin: auto;
+    height: 23%;
+}
