--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -5,7 +5,7 @@
 .navbar{
   min-height: 0 !important;
   margin-bottom: 0 !important;
-  background-color: #353535;
+  background-color: white;
   border-radius: 0 !important;
   border: none;
   opacity: 0.9;
@@ -13,16 +13,20 @@
   top: 0;
   width: 100%;
   z-index: 2;
+  border-bottom: 1px solid lightgrey;
 }
 
 .navbar-inverse .navbar-nav>li>a{
   font-size: 13px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    display: inline-block;
-    cursor: pointer;
+  font-weight: 700;
+  letter-spacing: 1px;
+  display: inline-block;
+  cursor: pointer;
 }
 
+.navbar-inverse .navbar-nav>li>a:hover{
+  color: black;
+}
 
 *, *::after, *::before {
   box-sizing: border-box;
@@ -244,7 +248,18 @@ a {
 }
 
 .login-form{
-  margin-top: 14%;
+    position: absolute;
+    bottom: 30px;
+    top: 0;
+    display: table;
+    margin: auto;
+    left: 0;
+    right: 0;
+}
+
+.form-horizontal{
+  max-width: 450px;
+  margin: auto;
 }
 
 .login-field{
@@ -260,7 +275,6 @@ a {
   margin-bottom: 1px;
   font-weight: 600;
   outline: none;
-  max-width: 512px;
 }
 
 #password{
@@ -284,15 +298,44 @@ a {
 }
 
 .register-notif{
-    position: absolute;
-    bottom: 0;
     margin: 0 auto;
     text-align: center;
     width: 100%;
-    margin-bottom: 2%;
+    margin-top: 4%;
     color: white;
 }
 
 *::-webkit-input-placeholder {
     color: rgba(255,255,255,0.7);
+}
+
+.footer{
+    padding: 10px;
+    height: auto;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+}
+
+.footer-icon{
+    width: 40px;
+    display: inline-block;
+    cursor: pointer;
+    margin: 0px 1px;
+}
+
+.footer-points{
+  padding-top: 15px;
+}
+
+.footer-items{
+    display: inline-block;
+    cursor: pointer
+}
+
+.item2{
+    border-left: 1px solid orangered;
+    border-right: 1px solid orangered;
+    padding: 0 5px 0 5px;
 }
