--- a/src/main/webapp/css/homepage-main.css
+++ b/src/main/webapp/css/homepage-main.css
@@ -32,6 +32,11 @@ body{
     display: table;
 }
 
+.content-col{
+    width: 33% !important;
+    float: left;
+}
+
 .section-2-1{
     padding: 200px 0 200px 0;
     background-color: #43b988 !important;
@@ -50,7 +55,7 @@ body{
     background-image: linear-gradient(180deg, #43b988 0%, #009efd 180%);
     width: 100%;
     position: relative;
-    padding-bottom: 12%;
+    padding-bottom: 7%;
 }
 
 .section-3-container{
@@ -58,12 +63,63 @@ body{
     margin: auto;
 }
 
-.video-holder{
-    height: 420px;
-    width: 720px;
-    background-color: black;
-    border: 1px solid white;
+.section-4{
+    padding: 5% 0 9% 0;
+    width: 100%;
+    background-color: white !important;
+    overflow: hidden;
+    text-align: center;
     position: relative;
+}
+
+.hotel-image{
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    min-height: 170px;
+    border-radius: 5px;
+    transition: all 0.2s ease;
+    cursor: pointer;
+}
+
+.hotel-image:hover{
+    transform: scale(1.05);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.recommendations-row{
+    max-width: 1100px;
+    margin: auto;
+}
+
+.recommendations-text{
+    color: black;
+    text-align: left;
+}
+
+.recomm-title{
+    font-weight: 600;
+    color: #343f44;
+    margin-top: 12px;
+}
+
+.recomm-country{
+    font-size: 12px;
+    color: grey;
+}
+
+.recom-col{
+    width: 25% !important;
+    float: right;
+}
+
+
+
+
+
+.video-main{
+    width: 100%;
+    height: 100%;
 }
 
 .text-holder{
@@ -201,4 +257,21 @@ body{
     display: table;
     margin: auto;
     height: 23%;
+    cursor: pointer;
+}
+
+.pause-button{
+    position: absolute;
+    bottom: 16px;
+    left: 38px;
+    display: none;
+    margin: auto;
+    height: 12%;
+    cursor: pointer;
+}
+
+@media all and (max-width: 1024px){
+    .dest-col{width: 33.3%;float: left; padding-bottom: 4%;}
+    .destination-row{padding: 0 14%; }
+    .destination-row-text{display: none;}
 }
