--- a/src/main/webapp/css/search-box.css
+++ b/src/main/webapp/css/search-box.css
@@ -84,3 +84,12 @@ a.hcsb_searchButton{
      max-width: 880px !important;
      margin: 0 auto !important;
  }
+
+
+@media all and (max-width: 980px){
+    .hcsb_checkinDateWrapper, .hcsb_checkoutDateWrapper, .hcsb_guestsRoomsWrapper {width: 100% !important;}
+    .hcsb_citySearch{font-size: 60px !important; padding: 0 0 0 2px !important;height: 2.1em !important;}
+    .hcsb_guests, .hcsb_checkinDay, .hcsb_checkinMonth, .hcsb_checkoutDay, .hcsb_checkoutMonth{font-size: 50px !important;}
+    label{font-size: 30px !important;}
+    a.hcsb_searchButton{font-size: 45px !important; width:100% !important;}
+}
